# cuEFIM

./: CMakeLists.txt  README.md  cuEFIM.txt  main.cu  main.cuh  no.txt  output.txt  temp.txt  todo.md  yes.txt
Python/: GPUEFIM.py  combined_results copy.csv  combined_results.csv  output.txt  test.ipynb
datasets/: values.txt
efimDirty/: Makefile  build.cu  efim  efim.cu  efimMem  efimMem.cpp  header.cuh  output.txt  parse.cu  search.cu  vechash.cu
include/: args.cuh  build.cuh  build.hpp  config.cuh  convert.cuh  database.cuh  file.cuh  file.hpp  memory.cuh  mine.cuh  parse.cuh  parse.hpp  structure.cuh  structure.hpp
src/: build.cpp  convert.cu  database.cu  file.cpp  main.cu  memory.cu  mine.cu  parse.cpp  parse.cu
temp/include/: main.hpp  parse.hpp
temp/src/: main.cpp  mine.cpp  parse.cpp
